# Final-Project

./: .gitignore
airflow/: .dockerignore  docker-compose.yaml  dockerfile  pyproject.toml
airflow/dags/: pinecone_dag.py
airflow/scripts/: chunking.py  pinecone_rag.py  validations.py
backend/: pyproject.toml
backend/agents/: crew_config.py  faq_agent.py  test_faq_pipeline.py
backend/agents/tools/: tools.py
backend/fastapi_backend/: app.py
backend/tests/: test_faq_agent.py
backend/utils/: pinecone_query.py
frontend/: app.py  pyproject.toml
