[project]
name = "final-project"
version = "0.1.0"
description = "Final project"
authors = [
    {name = "Poorvika Girish Babu"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "crewai (>=0.114.0,<0.115.0)",
    "sentence-transformers (>=4.1.0,<5.0.0)",
    "pydantic (>=2.11.3,<3.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "pinecone-client (==3.2.2)",
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.1,<0.35.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-asyncio = "^0.26.0"

